5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1724_2527.log
== TEST (2019-05-14 11:35:21) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
while(n>0)and(b<=n):
	if(n%b==0):
		print(b)
		b = b + 1
		t = t + 1
	else:
		b = b + 1
print(t,"divisores")
if(t=1):
	print("PERFEITO")
elif(t!=0)and(t>1):
	print("NAO PERFEITO")
-- ERROR:
File "XXXX", line 12
    if(t=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:37:56) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
while(n>0)and(b<=n):
	if(n%b==0):
		print(b)
		b = b + 1
		t = t + 1
	else:
		b = b + 1
print(t)
if(t==1):
	print("PERFEITO")
elif(t!=0)and(t>1):
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
10
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:38:17) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
while(n>0)and(b<=n):
	if(n%b==0):
		print(b)
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(t==1):
	print("PERFEITO")
elif(t!=0)and(t>1):
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:38:42) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
while(n>0)and(b<=n):
	if(n%b==0):
		print(b)
		b = b + 1
		t = t + 1
	else:
		b = b + 1
print(t/2)
if(t==1):
	print("PERFEITO")
elif(t!=0)and(t>1):
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
5.0
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:12) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:22) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:43) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("NAO PERFEITO")
else:
	print("PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:44:17) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("NAO PERFEITO")
else:
	print("PERFEITO")
-- EXECUTION TIME:
0.161383
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
PERFEITO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:46:18) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("NAO PERFEITO")
else:
	print("PERFEITO")
-- EXECUTION TIME:
0.207227
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
PERFEITO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:48) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("NAO PERFEITO")
else:
	print("PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:46:55) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("NAO PERFEITO")
else:
	print("PERFEITO")
-- EXECUTION TIME:
0.180212
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
PERFEITO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:48:02) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		b = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
NAO PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:48:20) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		d = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:48:37) 
-- CODE:
n = int(input("digite o numero inteiro:"))
t = 0
b = 1
d = 0
while(n>0)and(b<n):
	if(n%b==0):
		print(b)
		d = b + d
		b = b + 1
		t = t + 1
	else:
		b = b + 1
if(d==n):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- EXECUTION TIME:
0.179023
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
NAO PERFEITO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
